# Visualizer

./: CMakeLists.txt  README.txt  run.sh
resources/: phong_frag.glsl  phong_vert.glsl  simple_frag.glsl  simple_vert.glsl
src/: Particle.cpp  Particle.h  Shape.cpp  Texture.cpp  visualizer.cpp  wave_iteration.cpp
